Reduce benchmark runtime to 180 seconds and improve flush handling in NullStream